[package]
name = "rps_simulation"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = "0.6.0"
bevy = {version = "0.18.1", features = ["dynamic_linking","debug"]}
bevy_bc_ime_text_field = "0.1.1"
image = "0.25.10"
pollster = "0.4.0"
rand = "0.10.0"
rfd = "0.17.2"
wasm-bindgen-futures = "0.4.64"
