[package]
name = "rps_simulation"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = "0.6.0"
bevy = {version = "0.18.1", features = ["debug","dynamic_linking"]}
bevy_bc_ime_text_field = {path = "../bevy_bc_ime_text_field"}
image = "0.25.10"
pollster = "0.4.0"
rand = "0.10.0"
rfd = "0.17.2"
wasm-bindgen-futures = "0.4.64"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
